# TheWriter

./: .gitignore  AGENTS.md  README.md  pyproject.toml  для нотации 2 блока.txt
app/: __init__.py  main.py  settings.py
app/core/: __init__.py  autosave.py  plans.py  storage.py
app/ui/: __init__.py  current_situation.py  deal_scenarios.py  image_clipboard.py  main_window.py  scenario_template_dialog.py  theme.py  transition_scenarios.py  workbench_window.py
app/ui/templates/: breakout_inefficiency.json
tests/: test_current_situation.py  test_deal_scenarios.py  test_plans.py  test_scenario_template_dialog.py  test_storage.py  test_transition_scenarios.py
